--- a/app/globals.css
+++ b/app/globals.css
@@ -20,12 +20,15 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.left-main{
+  width: 50%;
+}
 
 .typewriter {
   display: inline-block;
   white-space: nowrap;
   overflow: hidden;
-  border-right: 3px solid #fff; /* Cursor effect */
+  border-right: 3px solid #fff; 
   animation: typing 4s steps(50) 1s 1 normal both, blink 0.75s step-end infinite;
 }
 
@@ -44,49 +47,35 @@ body {
   }
 }
 
-.glow {
-  height: 20rem;
-  width: 20rem;
-  background-image: linear-gradient(50deg, #008cff, #6287ff);
-  filter: blur(300px);
-  border-radius: 150px;
-  z-index: 0;
-  position: absolute;
-  left: 300px;
-  opacity:0.90;
+
+
+.button1{
+  display: inline-block;
+  text-decoration: none;
+  padding: 10px 0;
+  color: #fff;
+}
+
+.hover-3 { 
+  &:after {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 3px;
+      background-color: #1098ad;
+      transform: scaleX(0);
+      transform-origin: bottom left;
+
+      transition: transform 0.3s;
+  }
+
+  &:hover {
+      &:after {
+          transform: scaleX(1);
+      }
+  }
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-/* Style the entire scrollbar */
-::-webkit-scrollbar {
-  width: 6px; /* Makes the scrollbar thin */
-  height: 6px; /* For horizontal scrollbar */
-}
-
-/* Style the scrollbar track (background of the scrollbar) */
-::-webkit-scrollbar-track {
-  background: transparent; /* Makes the track transparent */
-}
-
-/* Style the scrollbar thumb (the draggable part) */
-::-webkit-scrollbar-thumb {
-  background: #333; /* Dark gray for a subtle blackish look */
-  border-radius: 10px; /* Rounded corners for a sleek look */
-}
-
-/* Style the scrollbar thumb on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: #555; /* Slightly lighter when hovered for contrast */
-}
